[gd_scene load_steps=12 format=3 uid="uid://o8hpxmhcss7m"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_fx8g5"]
[ext_resource type="Shape2D" uid="uid://bbymik5wl8fdm" path="res://scenes/player/player-shape.tres" id="2_f6gb7"]
[ext_resource type="PackedScene" uid="uid://u4ar3owfi8rq" path="res://scenes/utils/EntitySpeed.tscn" id="3_3ugq2"]
[ext_resource type="Script" path="res://scenes/utils/entity_experience.gd" id="3_s5lwd"]
[ext_resource type="Script" path="res://scenes/player/stats.gd" id="4_1b8mv"]
[ext_resource type="PackedScene" uid="uid://c7ho68p0rqxul" path="res://scenes/utils/EntityHealth.tscn" id="5_jfhqk"]
[ext_resource type="Texture2D" uid="uid://cvdtsfshhw75d" path="res://resource/player/player_transparent.png" id="5_wrljq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nkbqg"]
atlas = ExtResource("5_wrljq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cclxq"]
atlas = ExtResource("5_wrljq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpbkg"]
atlas = ExtResource("5_wrljq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b3kxe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkbqg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cclxq")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpbkg")
}],
"loop": true,
"name": &"sideways",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 25
motion_mode = 1
script = ExtResource("1_fx8g5")

[node name="Parameters" type="Node" parent="."]

[node name="Health" parent="Parameters" instance=ExtResource("5_jfhqk")]

[node name="Experience" type="Node" parent="Parameters"]
script = ExtResource("3_s5lwd")

[node name="EntitySpeed" parent="Parameters" instance=ExtResource("3_3ugq2")]

[node name="PlayerStats" type="Node" parent="Parameters"]
script = ExtResource("4_1b8mv")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 61

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = ExtResource("2_f6gb7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b3kxe")
animation = &"down"

[node name="CollideBox" type="CollisionShape2D" parent="."]
shape = ExtResource("2_f6gb7")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="entity_health_depleted" from="Parameters/Health" to="." method="_on_health_entity_health_depleted"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
